<resources>
    <string name="app_name">OrderFoodDemo</string>
    <string name="slogan_text">No matter where you are: whether you at home, or in the office, or
     on the beach - we wil find you and we will feed you</string>
    <string name="logo_image_view">logo image view</string>
    <string name="sign_up_button_text">sign up</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="hint_phone">phone</string>
    <string name="hint_password">password</string>
    <string name="hint_name">name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
