<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo_image_view"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/slogan_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@id/logo_image_view"
        android:layout_above="@id/button_layout"
        android:text="@string/slogan_text"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_sign_up"
            android:text="@string/sign_up_button_text"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_sign_in"
            android:text="@string/sign_in_button_text"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</RelativeLayout>